Package: aroma.core
===================

Version: 1.4.5 [2010-02-10]
o CLEANUP: Removed debug print() statements in isCompatibleWith().


Version: 1.4.4 [2010-02-03]
o ROBUSTNESS: Package now requires matrixStats v0.1.9 or newer,
  due to a bug in the earlier versions that would affect smoothing
  of chromosomal signals that contains missing values.
o Package passes R CMD check and all redundancy tests.


Version: 1.4.3 [2010-01-25]
o ROBUSTNESS: Added a sanity check getChromosomes() for class
  AromaUnitChromosomeTabularBinaryFile validating that the file 
  has a 'chromosome' column.
o CLEANUP: Using new Arguments$getTags() where ever possible.


Version: 1.4.2 [2010-01-13]
o ChromosomalModel:s (and and the ChromosomeExplorer) no
  longer require unit names files. 
o getListOfAromaUgpFiles() for ChromosomalModel no longer goes via 
  getListOfUnitNamesFiles().  This opens up the possibility to work 
  with data files without unit names files, e.g. smoothed CN data.
o Added getAromaUgpFile() for AromaPlatformInterface.
o Now getUnitNamesFile() for AromaPlatformInterface utilizes the 
  generic getUnitAnnotationDataFile() method.


Version: 1.4.1 [2010-01-06]
o Added argument 'defaults' to allocate() of AromaTabularBinaryFile.


Version: 1.4.0 [2010-01-04]
o Added trial version of segmentByMPCBS() via the 'mpcbs' package.
o BUG FIX: Added getDefaultFullName() for AromaMicroarrayDataSet and 
  AromaTabularBinarySet in order to override (parent=1) the new default 
  of GenericDataFileSet in R.filesets v0.7.0, which would return the
  chip type (parent=0) as the name.
o Package passes R CMD check on R v2.10.1 and R v2.11.0 devel and
  all of its redundancy tests.


Version: 1.3.8 [2010-01-02]
o Added getPairedNames() to CopyNumberChromosomalModel which returns
  combined '<test>vs<ref>' names, e.g. 'TumorvsNormal'.  The default
  behavior is that if <ref> is the average of a pool, then the
  paired name is '<test>', e.g. 'Tumor'.